--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </li>
 
                     <li>
-                        <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">روزنگار سایت چه دوره‌ی زمانی را پوشش می‌دهد؟ <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+                        <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">روتا وقایع چه دوره‌ی زمانی را پوشش می‌دهد؟ <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                         <div id="faq2" class="collapse" data-bs-parent=".faq-list">
                             <p>
                                 روتا وقایع پس از عصر ضفوی تا کنون را بیان می‌کند.
@@ -119,6 +119,24 @@
                         <div id="faq3" class="collapse" data-bs-parent=".faq-list">
                             <p>
                                 خیر، تمامی امکانات روتا به صورت رایگان و آزاد در اختیار همگی مردم است و همه می‌توانند از آن به بهترین شیوه استفاده کنند.
+                            </p>
+                        </div>
+                    </li>
+                    
+                    <li>
+                        <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">مخاطب روتا چه کسانی هستند؟ <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+                        <div id="faq3" class="collapse" data-bs-parent=".faq-list">
+                            <p>
+                                محققان و تدوینگران حوزه‌ی تاریخ شفاهی
+                            </p>
+                        </div>
+                    </li>
+                    
+                    <li>
+                        <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">منابع اطلاعاتی روتا چیستند؟ <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+                        <div id="faq3" class="collapse" data-bs-parent=".faq-list">
+                            <p>
+                                کتاب‌های تاریخی و روزنامه‌های دهه‌ی ۴۰ در اصفهان
                             </p>
                         </div>
                     </li>
