--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">روتا وقایع چه دوره‌ی زمانی را پوشش می‌دهد؟ <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                         <div id="faq2" class="collapse" data-bs-parent=".faq-list">
                             <p>
-                                روتا وقایع پس از عصر ضفوی تا کنون را بیان می‌کند.
+                                روتا وقایع پس از عصر صفوی تا کنون را بیان می‌کند.
                             </p>
                         </div>
                     </li>
